# pract_sem2

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  podcastserver.cpp  podcastserver.h  startdialog.cpp  startdialog.h
.github/workflows/: build.yml
